[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Scripts for interacting with the WhyLabs API"
authors = ["Andre Elizondo <andre@whylabs.ai>"]
license = "Apache2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
whylabs-client = "^0.4.2"
click = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
